# bear_todo_counter

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  bear_todo_counter.py  from_stdout.py  main.py  pyproject.toml  requirements.txt  setup.cfg  test_append_todo_count.py  test_bear_todo_counter.py
